--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container">
-    <header th:insert="my-visa/header :: header"></header>
+    <header th:insert="visas/header :: header"></header>
 
 
 </div>
@@ -21,6 +21,6 @@
         </div>
     </div>
 </main>
-<div th:insert="my-visa/footer :: footer"></div>
+<div th:insert="visas/footer :: footer"></div>
 </body>
 </html>
