--- a/src/main/resources/templates/visa-type.html
+++ b/src/main/resources/templates/visa-type.html
@@ -19,23 +19,11 @@
                             <div id="node-52321" class="node node-page clearfix" about="/vizy/category-type" typeof="schema:Article sioc:Item foaf:Document">
                                 <span property="dc:title" content="Классификация и типы виз" class="rdf-meta element-hidden"></span><span property="sioc:num_replies" content="0" datatype="xsd:integer" class="rdf-meta element-hidden"></span>
                                 <div class="content pad-l1e">
-                                    <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="section-content row">
-                                        <div class="col-sm-6 align-left animated fadeInLeft" data-duration="500" data-animation="fadeInLeft" style="animation-delay: 0ms; animation-duration: 0.5s;">
-                                            <article>
-                                                <h1>Классификация и типы <span class="highlight">виз</span>.</h1>
-                                                <p class="sub-title">Различные виды виз определяют не только факт получения разрешения для посещения страны, но и цель визита, ограничения по сроку пребывания, ограничение на предмет разрешенной деятельности и ввоза-вывоза средств и товаров.
-                                                </p>
-                                                <p>Как правило, основное деление виз происходит по сроку: краткосрочные и долгосрочные. Каждую из этих групп дополнительно уточняют еще несколькими подкатегориями.
-                                                </p>
-                                                <p>В каждой стране мира визы подразделяются на категории или отмечаются буквенно-цифирной маркировкой и предназначены для определенного типа посещения.</p>
-                                            </article>
-                                        </div>
-                                    </div>
                                         <div class="section-content row">
                                             <div class="col-md-6 pull-left">
                                                 <div class="panel panel-success">
                                                     <div class="panel-heading">
-                                                        <h4 class="dark-text">К краткосрочными относят следующие:</h4>
+                                                        <h4 class="dark-text">К краткосрочным типам виз относят:</h4>
                                                     </div>
                                                     <ul class="list-group">
                                                         <li class="list-group-item">1. <a href="#tourist"><span class="inv-color bg-pacifik2">Туристическая виза</span></a></li>
@@ -48,7 +36,7 @@
                                             <div class="col-md-6 pull-right">
                                                 <div class="panel panel-success">
                                                     <div class="panel-heading">
-                                                        <h4 class="dark-text">Долгосрочные подразделяют на:</h4>
+                                                        <h4 class="dark-text">Долгосрочные типы виз подразделяют на:</h4>
                                                     </div>
                                                     <ul class="list-group">
                                                         <li class="list-group-item">1. <a href="#guest"><span class="inv-color bg-pacifik2">Гостевая</span></a></li>
@@ -59,9 +47,6 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <p class="dark-text center lead mrg-t2em">
-                                            Благодаря статусу получателя так же может меняться тип визы, как правило, <br>различают: <strong>простую</strong> визу, <strong>служебную</strong> и <strong>дипломатическую</strong>.
-                                        </p>
                                         <div class="panel panel-default">
                                             <div class="panel-body">
                                                 <p>Под перечисленные выше категории выдают конкретный тип визы в каждом отдельном случае. Например, <strong>типы <a href="#shengenskaya-viza">шенгенских виз</a> подразделяются на основные классы A-D</strong>:
@@ -90,9 +75,9 @@
                                             </div>
                                         </section>
                                         <div class="section-content row">
-                                            <div class="col-sm-6 align-right animated fadeInRight" data-duration="500" data-animation="fadeInRight" style="animation-delay: 0ms; animation-duration: 0.5s;">
+                                            <div class="col-sm-12 align-left animated fadeInLeft" data-duration="500" data-animation="fadeInLeft" style="animation-delay: 0ms; animation-duration: 0.5s;">
                                                 <article>
-                                                    <h3><span class="highlight">Краткосрочные</span> визы</h3>
+                                                    <h3 class="align-right"><span class="highlight">Краткосрочные</span> визы</h3>
                                                     <p>Краткосрочными являются все типы виз, которые выдаются с разрешением на посещение страны сроком <strong>от 1 до 90 дней</strong>.</p>
                                                     <p>Краткосрочными бывают транзитные, туристические, гостевые и деловые визы. Виза может быть как однократной так и мульти.</p>
                                                     <p>Самое главное - по условиям выдачи краткосрочной визы, ее обладатель обязан покинуть территорию государства не позднее указанных в визе сроков. И находиться в стране не более определенного в визе количества дней.
@@ -183,16 +168,6 @@
                                             </div>
                                         </section>
                                         <div class="section-content row">
-                                            <div class="col-sm-6 align-right animated fadeInRight" data-duration="500" data-animation="fadeInRight" style="animation-delay: 0ms; animation-duration: 0.5s;">
-                                                <article>
-                                                    <h3>Что такое <span class="highlight">Шенгенская</span> зона?</h3>
-                                                    <p class="sub-title dark-text">Часто путают Европейский союз и страны Шенгенского соглашения. Это <strong>ошибка</strong> - это разные союзы!</p>
-                                                    <p>
-                                                        Соглашение приобрело такое название в честь небольшого поселка, где все и происходило. Это провинция, граничащая с Германией недалеко от реки Мозель. Первый список стран Шенгенского соглашения насчитывал лишь 5 государств. Создателями объединения стали Франция и Германия, и еще 3 страны, образовывающие Бенилюкс: Бельгия, Нидерланды, Люксембург.
-                                                    </p>
-                                                    <p>Цель соглашения - убрать паспортный и иммиграционный контроль на своих общих границах. Внутри шенгенской зоны граждане стран-участников могут свободно передвигаться как в одной стране, обладая равными международными правами передвижения. </p>
-                                                </article>
-                                            </div>
                                             <div class="col-sm-12 align-left animated fadeInLeft" data-duration="500" data-animation="fadeInLeft" style="animation-delay: 0ms; animation-duration: 0.5s;">
                                                 <article>
                                                     <h3>Какие страны входят в <span class="highlight">Шенгенский</span> союз</h3>
