--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -12,7 +12,10 @@
 <div class="container mt-5">
     <h1 th:text="${title}"></h1>
 </div>
-
+<div th:each="el : ${messages}" class="alert alert-info mt-2">
+    <h3 th:text="${el.title}"/>
+    <p th:text="${el.anons}"></p>
+</div>
 <div th:insert="visas/footer :: footer"></div>
 </body>
 </html>
