--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -10,11 +10,11 @@
     <header th:insert="visas/header :: header"></header>
 </div>
 <div class="container mt-5">
-    <h1 th:text="${title}"></h1>
+    <h1 th:text="${name}"></h1>
 </div>
-<div th:each="el : ${messages}" class="alert alert-info mt-2">
-    <h3 th:text="${el.title}"/>
-    <p th:text="${el.anons}"></p>
+<div th:each="el : ${admins}" class="alert alert-info mt-2">
+    <h3 th:text="${el.id}"/>
+    <p th:text="${el.name}"></p>
 </div>
 <div th:insert="visas/footer :: footer"></div>
 </body>
