--- a/src/main/resources/templates/visas/header.html
+++ b/src/main/resources/templates/visas/header.html
@@ -7,17 +7,16 @@
                 </h3>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
-                <a class="btn btn-sm btn-outline-secondary" href="account">Личный кабинет</a>
+                <a class="btn btn-sm btn-outline-secondary" href="/account">Личный кабинет</a>
             </div>
         </div>
     </header>
     <div class="nav-scroller py-1 mb-2">
         <nav class="nav d-flex justify-content-between">
             <a class="p-2 link-secondary" href="/">Главная страница</a>
-            <a class="p-2 link-secondary" href="visa-type">Информация о визах</a>
-            <a class="p-2 link-secondary" href="start">Заявки</a>
-            <a class="p-2 link-secondary" href="price">Прайс</a>
-            <a class="p-2 link-secondary" href="contact">О визовом центре</a>
+            <a class="p-2 link-secondary" href="/visa-type">Информация о визах</a>
+            <a class="p-2 link-secondary" href="/price">Прайс</a>
+            <a class="p-2 link-secondary" href="/contact">О визовом центре</a>
         </nav>
     </div>
 </div>
