--- a/src/main/resources/templates/visas/header.html
+++ b/src/main/resources/templates/visas/header.html
@@ -15,6 +15,7 @@
         <nav class="nav d-flex justify-content-between">
             <a class="p-2 link-secondary" href="/">Главная страница</a>
             <a class="p-2 link-secondary" href="/visa-type">Информация о визах</a>
+            <a class="p-2 link-secondary" href="/sign_in">Подать заявку</a>
             <a class="p-2 link-secondary" href="/price">Прайс</a>
             <a class="p-2 link-secondary" href="/contact">О визовом центре</a>
         </nav>
