--- a/src/main/resources/templates/visas/header.html
+++ b/src/main/resources/templates/visas/header.html
@@ -7,7 +7,7 @@
                 </h3>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
-                <a class="btn btn-sm btn-outline-secondary" href="/account">Личный кабинет</a>
+                <a class="btn btn-sm btn-outline-secondary" href="/account">Войти</a>
             </div>
         </div>
     </header>
