--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -15,24 +15,37 @@
   <div id="loginbox" style="margin-top: 50px;" class="mainbox col-md-3 col-md-offset-2 col-sm-6 col-sm-offset-2">
     <div class="panel panel-info">
       <div class="panel-heading">
-        <div class="panel-title">Авторизация</div>
+        <div class="panel-title">Регистрация</div>
       </div>
       <div style="padding-top: 30px" class="panel-body">
         <form th:action="@{/authenticateTheUser}" method="POST" class="form-horizontal">
           <div style="margin-bottom: 25px" class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <input type="text" name="username" placeholder="username" class="form-control">
+            <input type="text" name="first_name" placeholder="first_name" class="form-control">
+          </div>
+          <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <input type="text" name="last_name" placeholder="last_name" class="form-control">
+          </div>
+          <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <input type="text" name="email" placeholder="email" class="form-control">
+          </div>
+          <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <input type="text" name="login" placeholder="login" class="form-control">
           </div>
           <div style="margin-bottom: 25px" class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
             <input type="password" name="password" placeholder="password" class="form-control">
           </div>
+
           <div style="margin-top: 10px; text-align: center;" class="form-group">
             <div class="col-sm-10 controls">
-              <button type="submit" class="btn btn-primary">Войти</button>
+              <button type="submit" class="btn btn-primary">Регистрация</button>
               <br/>
               <br>
-              <button class="btn btn-light"><a th:href="@{/registration}">Регистрация</a></button>
+              <button class="btn btn-light"><a th:href="@{/}">Главная страница</a></button>
             </div>
           </div>
         </form>
