--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -18,7 +18,7 @@
         <div class="panel-title">Регистрация</div>
       </div>
       <div style="padding-top: 30px" class="panel-body">
-        <form th:action="@{/user}" method="POST" class="form-horizontal">
+        <form th:action="@{/manager}" method="POST" class="form-horizontal">
           <div style="margin-bottom: 25px" class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
             <input type="text" name="first_name" placeholder="first_name" class="form-control">
