--- a/src/main/resources/templates/sign_in.html
+++ b/src/main/resources/templates/sign_in.html
@@ -18,10 +18,10 @@
         <div class="panel-title">Авторизация</div>
       </div>
       <div style="padding-top: 30px" class="panel-body">
-        <form th:action="@{/user}" method="POST" class="form-horizontal">
+        <form th:action="@{/client}" method="POST" class="form-horizontal">
           <div style="margin-bottom: 25px" class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <input type="text" name="username" placeholder="username" class="form-control">
+            <input type="text" name="email" placeholder="email" class="form-control">
           </div>
           <div style="margin-bottom: 25px" class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
