--- a/src/main/resources/templates/sign_in.html
+++ b/src/main/resources/templates/sign_in.html
@@ -25,7 +25,7 @@
           </div>
           <div style="margin-bottom: 25px" class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-            <input type="password" name="password" placeholder="password" class="form-control">
+            <input type="password" name="last_name" placeholder="last_name" class="form-control">
           </div>
           <div style="margin-top: 10px; text-align: center;" class="form-group">
             <div class="col-sm-10 controls">
